entity_macros/tests/ui/derive/ent/unsupported-field-type-of-bare-fn.stderr
error: fn(...) are not supported as field types
  --> $DIR/unsupported-field-type-of-bare-fn.rs:18:15
   |
18 |     my_field: fn(u32) -> u32,
   |               ^^
